
TODO:
	show MIDI length in seconds.
	TextTrackWriter
	FingeringNavigator
		extend & squeeze costs



2017.9.30	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/FingeringGenerator: added node dump by path.


2017.9.29	K.L.	<k.l.lambda@gmail.com>

	>	Pianist/FingeringNavigator: fixed other finger obstacle cost.


2017.9.28	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/FingeringNavigator: unified obstacle cost added.


2017.9.27	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/FingeringNavigator: added omit keys punish.


2017.9.25	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/FingeringNavigator: added multiple fingers cost.
	+	Pianist/FingeringNavigator: added wrist crowd cost.

	+	Pianist/FingeringNavigator: added finger soft move interval cost.

	+	Pianist/FingeringNavigator: black key short cost added.

	>	Pianist/FingeringNavigator: fixed finger states.


2017.9.23	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/FingeringNavigator: added finger speed punish cost.

	+	Pianist/FingeringNavigator: finger states generation added.

	+	Pianist/FingeringNavigator: added time cost statistics.
	+	Pianist/FingeringNavigator: added static context.


2017.9.22	K.L.	<k.l.lambda@gmail.com>

	+	FingeringNavigatorViewer: refined controller bar.

	+	FingeringGenerator: added track name display.


2017.9.21	K.L.	<k.l.lambda@gmail.com>

	>	MIDIPiano: fixed note off missing issue.
	>	NotationUtils: fixed note off missing issue.

	*!	MIDI note on event with 0 velocity means note off.

	+	Pianist/FingeringNavigator: added LeafSequence.


2017.9.19	K.L.	<k.l.lambda@gmail.com>

	+	FingeringGenerator: avoid fingering constraints overwrited after saving.


2017.9.18	K.L.	<k.l.lambda@gmail.com>

	+	FingeringNavigatorViewer: save source in storage.
	+	FingeringNavigatorViewer: file drag & drop added.

	+	Pianist/FingeringNavigator: constraits navigation implemented.

	+	NotationUtils: added fingering parsing in parseMidiTrack.

	>	Pianist/FingeringNavigator: added MinStepCount.
