@@ -9,6 +9,8 @@ TODO:
 
 2017.9.30	K.L.	<k.l.lambda@gmail.com>
 
+	>	Pianist/FingeringNavigator: fixed obstacle cost.
+
 	+	Pianist/FingeringGenerator: added node dump by path.
 
 
